[project]
name = "reactor"
version = "1.dev0"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0.7,<7.0.0",
  "django-environ>=0.14.0,<0.15.0",
  "pillow>=12.3.0,<13.0.0",
  "psycopg[binary]>=3.3.4,<4.0.0",
]

[dependency-groups]
dev = [
  { include-group = "ruff" },
]
ruff = [
  "ruff>=0.15.22,<0.16.0",
]
