[project]
name = "reactor"
version = "1.dev0"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0.7,<7.0.0",
  "django-environ>=0.14.0,<0.15.0",
  "pillow>=12.3.0,<13.0.0",
  "psycopg[binary]>=3.3.4,<4.0.0",
]

[dependency-groups]
dev = [
  { include-group = "djlint" },
  { include-group = "local" },
  { include-group = "pytest" },
  { include-group = "ruff" },
]
djlint = [
  "djlint>=1.42.2,<2.0.0",
]
local = [
  "django-debug-toolbar>=7.0.0,<8.0.0",
  "ipython>=9.15.0,<10.0.0",
]
pytest = [
  "model-bakery>=1.24.0,<2.0.0",
  "pytest>=9.1.1,<10.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "pytest-django>=4.12.0,<5.0.0",
  "pytest-env>=1.7.0,<2.0.0",
  "pytest-mock>=3.15.1,<4.0.0",
  "pytest-randomly>=4.1.0,<5.0.0",
]
ruff = [
  "ruff>=0.15.22,<0.16.0",
]
